--- a/WooCommerce/Resources/ar.lproj/Localizable.strings
+++ b/WooCommerce/Resources/ar.lproj/Localizable.strings
@@ -1,4 +1,4 @@
-/* Translation-Revision-Date: 2018-12-11 13:54:02+0000 */
+/* Translation-Revision-Date: 2019-01-08 12:54:02+0000 */
 /* Plural-Forms: nplurals=6; plural=n==0 ? 0 : n==1 ? 1 : n==2 ? 2 : n%100>=3 && n%100<=10 ? 3 : n%100>=11 && n%100<=99 ? 4 : 5; */
 /* Generator: GlotPress/2.4.0-alpha */
 /* Language: ar */
@@ -13,13 +13,13 @@
 "A verification code will only contain numbers." = "سيحتوي رمز التحقق على أرقام فقط.";
 
 /* About this app (information page title) */
-"About" = "About";
+"About" = "نبذة عن";
 
 /* My Store > Settings > About app section */
-"About the app" = "About the app";
+"About the app" = "حول التطبيق";
 
 /* Application's Active State */
-"Active" = "Active";
+"Active" = "نشط";
 
 /* The plugin is active on the site and has not enabled automatic updates */
 "Active, Autoupdates off" = "نشط، التحديثات التلقائية قيد إيقاف التشغيل";
@@ -91,7 +91,7 @@
 "Back" = "رجوع";
 
 /* Application's Background State */
-"Background" = "Background";
+"Background" = "الخلفية";
 
 /* VoiceOver accessibility value, informs the user about a specific bar in the revenue chart. It reads: Bar number {bar number} {summary of bar}. */
 "Bar number %1$i, %2$@, " = "رقم الشريط %1$i, %2$@, ";
@@ -118,7 +118,7 @@
 "Canceled" = "تم الإلغاء";
 
 /* Error displayed when trying to access a site on the site picker screen. It reads: Cannot connect to {site name} */
-"Cannot connect to %@" = "Cannot connect to %@";
+"Cannot connect to %@" = "يتعذر الاتصال بـ %@";
 
 /* shown in promotional screens during first launch */
 "Catch up with your favorite sites and join the conversation anywhere, any time." = "حافظ على مواقعك المفضلة وانضم إلى المحادثة أينما كنت ووقتما تشاء.";
@@ -172,10 +172,10 @@
 "Could not unfollow the site at the address specified." = "تعذر إلغاء متابعة الموقع في العنوان المحدد.";
 
 /* Error message shown a URL points to a valid site but not a WordPress site. */
-"Couldn't connect to the WordPress site. There is no valid WordPress site at this address. Check the site address (URL) you entered." = "Couldn't connect to the WordPress site. There is no valid WordPress site at this address. Check the site address (URL) you entered.";
+"Couldn't connect to the WordPress site. There is no valid WordPress site at this address. Check the site address (URL) you entered." = "تعذر الاتصال بموقع وردبرس. لا يوجد موقع وردبرس صالح على هذا العنوان. تحقَّق من عنوان الموقع (URL) الذي أدخلته.";
 
 /* Message to show to user when he tries to add a self-hosted site with RSD link present, but xmlrpc is missing. */
-"Couldn't connect. Required XML-RPC methods are missing on the server." = "Couldn't connect. Required XML-RPC methods are missing on the server.";
+"Couldn't connect. Required XML-RPC methods are missing on the server." = "تعذر الاتصال. تكون طرق XML-RPC المطلوبة مفقودة على الخادم.";
 
 /* Message to show to user when he tries to add a self-hosted site but the host returned a 403 error, meaning that the access to the /xmlrpc.php file is forbidden. */
 "Couldn't connect. We received a 403 error when trying to access your site XMLRPC endpoint. The app needs that in order to communicate with your site. Contact your host to solve this problem." = "تعذر الاتصال. تلقينا الخطأ 403 عند محاولة الوصول إلى نقطة نهاية موقعك XMLRPC. يحتاج التطبيق إلى ذلك للاتصال بموقعك. يُرجى الاتصال بالمضيف لحل هذه المشكلة.";
@@ -195,9 +195,6 @@
 /* Plural of 'day' — a statistical unit */
 "Days" = "ايام";
 
-/* Order Notice */
-"Deleted: Order #(viewModel.order.number)" = "محذوف: طلب رقم #(viewModel.order.number)";
-
 /* The row label to tap for a detailed product list */
 "Details" = "تفاصيل";
 
@@ -214,19 +211,19 @@
 "Don't have an account? _Sign up_" = "أليس لديك حساب؟ _Sign up_";
 
 /* WordPress.com (unmapped!) error */
-"Dotcom Error: [(code)] (theMessage)" = "Dotcom Error: [(code)] (theMessage)";
+"Dotcom Error: [(code)] (theMessage)" = "خطأ في الدوت كوم: [(رمز)] (theMessage)";
 
 /* WordPress.com Missing Token */
-"Dotcom Missing Token" = "Dotcom Missing Token";
+"Dotcom Missing Token" = "رمز الدوت كوم المميز مفقود";
 
 /* WordPress.com Request Failure */
-"Dotcom Request Failed" = "Dotcom Request Failed";
+"Dotcom Request Failed" = "فشل طلب الدوت كوم";
 
 /* WordPress.com Error thrown when the response body is empty */
-"Dotcom Response Empty" = "Dotcom Response Empty";
+"Dotcom Response Empty" = "استجابة الدوت كوم فارغة";
 
 /* WordPress.com Invalid Token */
-"Dotcom Token Invalid" = "Dotcom Token Invalid";
+"Dotcom Token Invalid" = "رمز الدوت كوم غير صالح";
 
 /* Voiceover accessibility hint informing the user they can double tap a modal alert to dismiss it */
 "Double tap to dismiss" = "اضغط ضغطًا مزدوجًا للتجاهل";
@@ -264,9 +261,6 @@
 /* No comment provided by engineer. */
 "Enter your password instead." = "بدلاً من ذلك، أدخل كلمة المرور.";
 
-/* No comment provided by engineer. */
-"Error" = "Error";
-
 /* Failed Order Status */
 "Failed" = "فشل";
 
@@ -274,7 +268,7 @@
 "Failed to serialize request to the REST API." = "فشل في تسلسل الطلب إلى REST API.";
 
 /* Navigates to the feature request screen */
-"Feature Request" = "Feature Request";
+"Feature Request" = "تمييز الطلب";
 
 /* Accessibility label for the Filter notifications button. */
 "Filter notifications" = "ترشيح التنبيهات";
@@ -296,9 +290,6 @@
 
 /* Fulfill order button title */
 "Fulfill order" = "إتمام الطلب";
-
-/* Fulfill Notice Title */
-"Fulfillment" = "الإتمام";
 
 /* Description for Top Performers section of My Store tab. */
 "Gain insights into how products are performing on your store" = "احصل على رؤى دقيقة حول كيفية أداء المنتجات في متجرك";
@@ -322,7 +313,7 @@
 "Help & Support" = "المساعدة والدعم";
 
 /* My Store > Settings > Privacy settings section */
-"Help Improve The App" = "Help Improve The App";
+"Help Improve The App" = "المساعدة على تحسين التطبيق";
 
 /* Footer text to hide the billing cell */
 "Hide billing" = "إخفاء الفوترة";
@@ -331,10 +322,10 @@
 "Hmm, it doesn't look like there's a WordPress site at this URL. Double-check the spelling and try again." = "عذرًا، لا يبدو أن هناك موقعًا لوردبرس على عنوان URL هذا. تحقق مجددًا من التهجئة وحاول مجددًا.";
 
 /* Detail label for yes/no switch. */
-"If disabled the note will be private" = "If disabled the note will be private";
+"If disabled the note will be private" = "في حالة تعطيلها، فستكون الملاحظة خاصة";
 
 /* Application's Inactive State */
-"Inactive" = "Inactive";
+"Inactive" = "غير نشط";
 
 /* The plugin is not active on the site and has not enabled automatic updates */
 "Inactive, Autoupdates off" = "غير نشط، التحديثات التلقائية قيد إيقاف التشغيل";
@@ -373,7 +364,7 @@
 "Learn more" = "تعرف على المزيد";
 
 /* Licenses (information page title) */
-"Licenses" = "Licenses";
+"Licenses" = "تراخيص";
 
 /* Message to show when a request for a WP.com API endpoint is throttled */
 "Limit reached. You can try again in 1 minute. Trying again before that will only increase the time you have to wait before the ban is lifted. If you think this is in error, contact support." = "تم الوصول إلى الحد المسموح به. يمكنك المحاولة مرة أخرى في غضون دقيقة واحدة. حاول مرة أخرى لأن ذلك سيؤدي إلى زيادة الوقت الذي ينبغي لك انتظاره قبل رفع الحظر. إذا كنت تعتقد أن ذلك خطأ داخلي، فاتصل بالدعم.";
@@ -483,6 +474,9 @@
 /* Empty Notifications List Message */
 "No Notifications Yet!" = "لا توجد تنبيهات بعد!";
 
+/* Search Orders (Empty State) */
+"No Orders found" = "لم يتم العثور على طلبات";
+
 /* Default text for Top Performers section when no data exists for a given period. */
 "No activity this period" = "لا يوجد أي نشاط في هذه الفترة";
 
@@ -529,10 +523,10 @@
 "Open Mail" = "فتح البريد";
 
 /* Opens iOS's Device Settings for the app */
-"Open device settings" = "Open device settings";
+"Open device settings" = "فتح إعدادات الجهاز";
 
 /* Navigates to open source licenses screen */
-"Open source licenses" = "Open source licenses";
+"Open source licenses" = "تراخيص المصدر المفتوحة";
 
 /* No comment provided by engineer. */
 "Optional Tracking Information" = "معلومات التعقب الاختيارية";
@@ -540,11 +534,14 @@
 /* No comment provided by engineer. */
 "Order #(viewModel.order.number)" = "طلب رقم #(viewModel.order.number)";
 
-/* Fulfill Notice Message */
-"Order Marked as Complete!" = "تم وضع علامة مكتمل على الطلب!";
+/* Displayed whenever the Details for an Order that just got deleted was onscreen. It reads: Order {order number} has been deleted from your store */
+"Order %@ has been deleted from your store" = "تم حذف الطلب %@ من متجرك";
 
 /* Order notes section title */
 "Order Notes" = "ملاحظات الطلب";
+
+/* Order fulfillment success notice */
+"Order marked as fulfilled" = "تم وسم الطلب كمُنجز";
 
 /* No comment provided by engineer. */
 "Orders" = "الطلبات";
@@ -553,7 +550,7 @@
 "Orders: (filter)" = "الطلبات: (التصفية)";
 
 /* My Store > Settings > Other app section */
-"Other" = "Other";
+"Other" = "أخرى";
 
 /* Product section title */
 "PRODUCT" = "المنتج";
@@ -592,7 +589,7 @@
 "Please enter your credentials" = "يُرجى إدخال بيانات اعتمادك";
 
 /* Instructions for alert asking for email and name. */
-"Please enter your email address and username:" = "Please enter your email address and username:";
+"Please enter your email address and username:" = "يرجى إدخال عنوان بريدك الإلكتروني واسم المستخدم الخاص بك:";
 
 /* Instructions for alert asking for email. */
 "Please enter your email address:" = "يُرجى إدخال عنوان البريد الإلكتروني.";
@@ -604,10 +601,10 @@
 "Please open your email app and look for an email from WordPress.com." = "يُرجى فتح تطبيق البريد الإلكتروني والبحث عن بريد إلكتروني من وردبرس.كوم.";
 
 /* My Store > Settings > Primary Store information section */
-"Primary Store" = "Primary Store";
+"Primary Store" = "متجر أساسي";
 
 /* Opens the Privacy Policy web page */
-"Privacy Policy" = "Privacy Policy";
+"Privacy Policy" = "سياسة الخصوصية";
 
 /* Navigates to Privacy Settings screen */
 "Privacy Settings" = "إعدادات الخصوصية";
@@ -654,14 +651,17 @@
 /* Settings > Privacy Settings > report crashes section. Label for the `Report crashes` toggle. */
 "Report crashes" = "الإبلاغ عن الأعطال";
 
+/* VoiceOver accessibility hint, informing the user the button can be used to search orders. */
+"Retrieves a list of orders that contain a given keyword." = "يسترد قائمة الطلبات التي تحتوي على كلمة أساسية معيّنة.";
+
 /* No comment provided by engineer. */
 "Retry" = "إعادة المحاولة";
 
 /* Revenue stat label on dashboard. */
-"Revenue" = "Revenue";
+"Revenue" = "الإيراد";
 
-/* Review moderation success notice message */
-"Review marked %@" = "Review marked %@";
+/* Review moderation success notice message. It reads: Review marked as {new status} */
+"Review marked as %@" = "Review marked as %@";
 
 /* Description text used on the UI element displayed when a user has pending orders to process. */
 "Review, prepare, and ship these pending orders" = "مراجعة هذه الطلبات المُعلّقة وإعدادها وشحنها";
@@ -674,6 +674,12 @@
 
 /* One Time Code has been sent via SMS */
 "SMS Sent" = "تم إرسال SMS";
+
+/* Orders Search Placeholder */
+"Search all orders" = "البحث عن جميع الطلبات";
+
+/* Search Orders */
+"Search orders" = "البحث عن الطلبات";
 
 /* Title of a button. The text should be uppercase.  Clicking requests a hyperlink be emailed ot the user. */
 "Send Link" = "إرسال رابط";
@@ -784,7 +790,7 @@
 "Subtotal" = "الإجمالي الفرعي";
 
 /* Labels an order note to let user know it's a system status message */
-"System status" = "System status";
+"System status" = "حالة النظام";
 
 /* Tax label for total taxes line */
 "Tax:" = "الضريبة:";
@@ -793,7 +799,7 @@
 "Taxes" = "الضرائب";
 
 /* Opens the Terms of Service web page */
-"Terms of Service" = "Terms of Service";
+"Terms of Service" = "شروط الخدمة";
 
 /* Button title */
 "Text me a code instead" = "اكتب رمزًا لي بدلاً من ذلك";
@@ -833,9 +839,6 @@
 
 /* Displayed whenever a Notification that was onscreen got deleted. */
 "The notification has been removed" = "تمت إزالة التنبيه!";
-
-/* Displayed whenever the Details for an Order that just got deleted was onscreen. */
-"The order has been deleted from your Store!" = "تم حذف الطلب من متجرك!";
 
 /* No comment provided by engineer. */
 "The server returned an empty response. This usually means you need to increase the memory limit for your site." = "أرجع الخادم استجابة فارغة. يعني ذلك عادة أنك بحاجة إلى زيادة الحد الأقصى لذاكرة موقعك.";
@@ -921,8 +924,8 @@
 /* Displayed during the Login flow, whenever the user has no woo stores associated. */
 "Unable to find WooCommerce stores connected to this account" = "يتعذر العثور على متاجر WooCommerce المتصلة بهذا الحساب";
 
-/* Review error notice message */
-"Unable to mark review %@" = "Unable to mark review %@";
+/* Review error notice message. It reads: Unable to mark review as {attempted status} */
+"Unable to mark review as %@" = "Unable to mark review as %@";
 
 /* No comment provided by engineer. */
 "Unable to read the WordPress site at that URL. Tap 'Need Help?' to view the FAQ." = "يتعذر قراءة موقع WordPress على معرف URL ذلك. انقر على \"هل تحتاج إلى المساعدة؟\" لعرض الأسئلة المتداولة.";
@@ -940,7 +943,7 @@
 "Undo" = "تراجع";
 
 /* Unknown Application State */
-"Unknown" = "Unknown";
+"Unknown" = "غير معروف";
 
 /* No comment provided by engineer. */
 "Unknown Search Terms" = "مصطلحات بحث غير معروفة";
@@ -967,7 +970,7 @@
 "Version" = "النسخة";
 
 /* Displays the version of the App */
-"Version %@" = "Version %@";
+"Version %@" = "الإصدار %@";
 
 /* subtitle for My Tickets */
 "View previously submitted support tickets" = "عرض تذاكر الدعم التي تم إرسالها مسبقًا";
@@ -976,7 +979,7 @@
 "Viewer" = "المشاهد";
 
 /* Visitors stat label on dashboard - should be plural. */
-"Visitors" = "Visitors";
+"Visitors" = "الزائرون";
 
 /* Add a note screen - Write Note section title */
 "WRITE NOTE" = "كتابة الملاحظة";
