--- a/WooCommerce/Resources/nl.lproj/Localizable.strings
+++ b/WooCommerce/Resources/nl.lproj/Localizable.strings
@@ -1,4 +1,4 @@
-/* Translation-Revision-Date: 2018-12-21 14:44:46+0000 */
+/* Translation-Revision-Date: 2019-01-09 13:54:02+0000 */
 /* Plural-Forms: nplurals=2; plural=n != 1; */
 /* Generator: GlotPress/2.4.0-alpha */
 /* Language: nl */
@@ -13,13 +13,13 @@
 "A verification code will only contain numbers." = "Een verificatiecode bevat alleen getallen.";
 
 /* About this app (information page title) */
-"About" = "About";
+"About" = "Over";
 
 /* My Store > Settings > About app section */
-"About the app" = "About the app";
+"About the app" = "Over de app";
 
 /* Application's Active State */
-"Active" = "Active";
+"Active" = "Actief";
 
 /* The plugin is active on the site and has not enabled automatic updates */
 "Active, Autoupdates off" = "Actief, auto-updates uit";
@@ -91,7 +91,7 @@
 "Back" = "Terug";
 
 /* Application's Background State */
-"Background" = "Background";
+"Background" = "Achtergrond";
 
 /* VoiceOver accessibility value, informs the user about a specific bar in the revenue chart. It reads: Bar number {bar number} {summary of bar}. */
 "Bar number %1$i, %2$@, " = "Barcode %1$i, %2$@, ";
@@ -118,7 +118,7 @@
 "Canceled" = "Geannuleerd";
 
 /* Error displayed when trying to access a site on the site picker screen. It reads: Cannot connect to {site name} */
-"Cannot connect to %@" = "Cannot connect to %@";
+"Cannot connect to %@" = "Kan geen verbinding maken met %@";
 
 /* shown in promotional screens during first launch */
 "Catch up with your favorite sites and join the conversation anywhere, any time." = "Volg je favoriete sites en neem altijd en overal deel aan het gesprek.";
@@ -172,10 +172,10 @@
 "Could not unfollow the site at the address specified." = "Kon de site niet ontvolgen op het opgegeven adres.";
 
 /* Error message shown a URL points to a valid site but not a WordPress site. */
-"Couldn't connect to the WordPress site. There is no valid WordPress site at this address. Check the site address (URL) you entered." = "Couldn't connect to the WordPress site. There is no valid WordPress site at this address. Check the site address (URL) you entered.";
+"Couldn't connect to the WordPress site. There is no valid WordPress site at this address. Check the site address (URL) you entered." = "Kan geen verbinding maken met de WordPress-site. Er is geen geldige WordPress-site op dit adres. Controleer of je het goede websiteadres (URL) hebt opgegeven.";
 
 /* Message to show to user when he tries to add a self-hosted site with RSD link present, but xmlrpc is missing. */
-"Couldn't connect. Required XML-RPC methods are missing on the server." = "Couldn't connect. Required XML-RPC methods are missing on the server.";
+"Couldn't connect. Required XML-RPC methods are missing on the server." = "Kan geen verbinding maken. Vereiste XML-RPC-methoden ontbreken op de server.";
 
 /* Message to show to user when he tries to add a self-hosted site but the host returned a 403 error, meaning that the access to the /xmlrpc.php file is forbidden. */
 "Couldn't connect. We received a 403 error when trying to access your site XMLRPC endpoint. The app needs that in order to communicate with your site. Contact your host to solve this problem." = "Kan geen verbinding maken. Er is een 403-fout opgetreden tijdens onze poging om het XMLRPC-eindpunt van je site te openen. De app heeft dat nodig om met je site te communiceren. Neem contact op met je host om dit probleem op te lossen.";
@@ -195,9 +195,6 @@
 /* Plural of 'day' — a statistical unit */
 "Days" = "Dagen";
 
-/* Order Notice */
-"Deleted: Order #(viewModel.order.number)" = "Verwijderd: Bestelnr. (viewModel.order.number)";
-
 /* The row label to tap for a detailed product list */
 "Details" = "Details";
 
@@ -214,19 +211,19 @@
 "Don't have an account? _Sign up_" = "Heb je geen account? _Aanmelden_";
 
 /* WordPress.com (unmapped!) error */
-"Dotcom Error: [(code)] (theMessage)" = "Dotcom Error: [(code)] (theMessage)";
+"Dotcom Error: [(code)] (theMessage)" = "Dotcom-fout: [(code)] (theMessage)";
 
 /* WordPress.com Missing Token */
-"Dotcom Missing Token" = "Dotcom Missing Token";
+"Dotcom Missing Token" = "Dotcom-token ontbreekt";
 
 /* WordPress.com Request Failure */
-"Dotcom Request Failed" = "Dotcom Request Failed";
+"Dotcom Request Failed" = "Dotcom-verzoek mislukt";
 
 /* WordPress.com Error thrown when the response body is empty */
-"Dotcom Response Empty" = "Dotcom Response Empty";
+"Dotcom Response Empty" = "Dotcom-reactie leeg";
 
 /* WordPress.com Invalid Token */
-"Dotcom Token Invalid" = "Dotcom Token Invalid";
+"Dotcom Token Invalid" = "Dotcom-token ongeldig";
 
 /* Voiceover accessibility hint informing the user they can double tap a modal alert to dismiss it */
 "Double tap to dismiss" = "Dubbel klikken om te negeren";
@@ -264,9 +261,6 @@
 /* No comment provided by engineer. */
 "Enter your password instead." = "Voer je wachtwoord in.";
 
-/* No comment provided by engineer. */
-"Error" = "Error";
-
 /* Failed Order Status */
 "Failed" = "Mislukt";
 
@@ -274,7 +268,7 @@
 "Failed to serialize request to the REST API." = "Aanvraag naar de REST API serialiseren mislukt.";
 
 /* Navigates to the feature request screen */
-"Feature Request" = "Feature Request";
+"Feature Request" = "Functie-aanvraag";
 
 /* Accessibility label for the Filter notifications button. */
 "Filter notifications" = "Meldingen filteren";
@@ -296,9 +290,6 @@
 
 /* Fulfill order button title */
 "Fulfill order" = "Bestelling voltooien";
-
-/* Fulfill Notice Title */
-"Fulfillment" = "Voltooiing";
 
 /* Description for Top Performers section of My Store tab. */
 "Gain insights into how products are performing on your store" = "Krijg inzicht in hoe goed producten op je site presteren";
@@ -322,7 +313,7 @@
 "Help & Support" = "Help & ondersteuning";
 
 /* My Store > Settings > Privacy settings section */
-"Help Improve The App" = "Help Improve The App";
+"Help Improve The App" = "Help bij het verbeteren van de app";
 
 /* Footer text to hide the billing cell */
 "Hide billing" = "Facturen verbergen";
@@ -331,10 +322,10 @@
 "Hmm, it doesn't look like there's a WordPress site at this URL. Double-check the spelling and try again." = "Hmm, er is geen WordPress-site gevonden op deze URL. Controleer de spelling en probeer het nogmaals.";
 
 /* Detail label for yes/no switch. */
-"If disabled the note will be private" = "If disabled the note will be private";
+"If disabled the note will be private" = "Als deze functie is uitgeschakeld, is de opmerking privé";
 
 /* Application's Inactive State */
-"Inactive" = "Inactive";
+"Inactive" = "Inactief";
 
 /* The plugin is not active on the site and has not enabled automatic updates */
 "Inactive, Autoupdates off" = "Inactief, auto-updates uit";
@@ -373,7 +364,7 @@
 "Learn more" = "Meer informatie";
 
 /* Licenses (information page title) */
-"Licenses" = "Licenses";
+"Licenses" = "Licenties";
 
 /* Message to show when a request for a WP.com API endpoint is throttled */
 "Limit reached. You can try again in 1 minute. Trying again before that will only increase the time you have to wait before the ban is lifted. If you think this is in error, contact support." = "Limiet bereikt. Je kan het na 1 minuut nogmaals proberen. Als je het eerder probeert dan zul je langer moeten wachten totdat de ban wordt opgeheven. Neem contact op met de helpdesk wanneer je denk dat dit niet klopt.";
@@ -483,6 +474,9 @@
 /* Empty Notifications List Message */
 "No Notifications Yet!" = "Nog geen meldingen!";
 
+/* Search Orders (Empty State) */
+"No Orders found" = "Geen bestellingen gevonden";
+
 /* Default text for Top Performers section when no data exists for a given period. */
 "No activity this period" = "Geen activiteiten deze periode";
 
@@ -529,10 +523,10 @@
 "Open Mail" = "Open e-mail";
 
 /* Opens iOS's Device Settings for the app */
-"Open device settings" = "Open device settings";
+"Open device settings" = "Open Apparaatinstellingen";
 
 /* Navigates to open source licenses screen */
-"Open source licenses" = "Open source licenses";
+"Open source licenses" = "Bronlicenties openen";
 
 /* No comment provided by engineer. */
 "Optional Tracking Information" = "Optionele tracking-informatie";
@@ -540,11 +534,14 @@
 /* No comment provided by engineer. */
 "Order #(viewModel.order.number)" = "Bestelnr. (viewModel.order.number)";
 
-/* Fulfill Notice Message */
-"Order Marked as Complete!" = "Bestelling gemarkeerd als voltooid!";
+/* Displayed whenever the Details for an Order that just got deleted was onscreen. It reads: Order {order number} has been deleted from your store */
+"Order %@ has been deleted from your store" = "Bestelling %@ is uit je winkel verwijderd";
 
 /* Order notes section title */
 "Order Notes" = "Berichten van bestelling";
+
+/* Order fulfillment success notice */
+"Order marked as fulfilled" = "Bestelling gemarkeerd als voltooid";
 
 /* No comment provided by engineer. */
 "Orders" = "Bestellingen";
@@ -553,7 +550,7 @@
 "Orders: (filter)" = "Bestellingen: (filter)";
 
 /* My Store > Settings > Other app section */
-"Other" = "Other";
+"Other" = "Overige";
 
 /* Product section title */
 "PRODUCT" = "PRODUCT";
@@ -592,7 +589,7 @@
 "Please enter your credentials" = "Voer alsjeblieft je gegevens in";
 
 /* Instructions for alert asking for email and name. */
-"Please enter your email address and username:" = "Please enter your email address and username:";
+"Please enter your email address and username:" = "Vul je e-mailadres en gebruikersnaam in:";
 
 /* Instructions for alert asking for email. */
 "Please enter your email address:" = "Vul je e-mailadres in.";
@@ -604,10 +601,10 @@
 "Please open your email app and look for an email from WordPress.com." = "Open jouw e-mail app en kijk naar een e-mail van WordPress.com.";
 
 /* My Store > Settings > Primary Store information section */
-"Primary Store" = "Primary Store";
+"Primary Store" = "Primaire winkel";
 
 /* Opens the Privacy Policy web page */
-"Privacy Policy" = "Privacy Policy";
+"Privacy Policy" = "Privacybeleid";
 
 /* Navigates to Privacy Settings screen */
 "Privacy Settings" = "Privacy instellingen";
@@ -654,14 +651,17 @@
 /* Settings > Privacy Settings > report crashes section. Label for the `Report crashes` toggle. */
 "Report crashes" = "Crashes melden";
 
+/* VoiceOver accessibility hint, informing the user the button can be used to search orders. */
+"Retrieves a list of orders that contain a given keyword." = "Haalt een lijst op met bestellingen die een bepaald trefwoord bevatten.";
+
 /* No comment provided by engineer. */
 "Retry" = "Opnieuw";
 
 /* Revenue stat label on dashboard. */
-"Revenue" = "Revenue";
+"Revenue" = "Inkomsten";
 
-/* Review moderation success notice message */
-"Review marked %@" = "Review marked %@";
+/* Review moderation success notice message. It reads: Review marked as {new status} */
+"Review marked as %@" = "Review marked as %@";
 
 /* Description text used on the UI element displayed when a user has pending orders to process. */
 "Review, prepare, and ship these pending orders" = "Controleer deze bestellingen in behandeling, bereid ze voor en verzend ze";
@@ -674,6 +674,12 @@
 
 /* One Time Code has been sent via SMS */
 "SMS Sent" = "Sms verzonden";
+
+/* Orders Search Placeholder */
+"Search all orders" = "Alle bestellingen doorzoeken";
+
+/* Search Orders */
+"Search orders" = "Bestellingen doorzoeken";
 
 /* Title of a button. The text should be uppercase.  Clicking requests a hyperlink be emailed ot the user. */
 "Send Link" = "Stuur link";
@@ -784,7 +790,7 @@
 "Subtotal" = "Subtotaal";
 
 /* Labels an order note to let user know it's a system status message */
-"System status" = "System status";
+"System status" = "Systeemstatus";
 
 /* Tax label for total taxes line */
 "Tax:" = "Belasting:";
@@ -793,7 +799,7 @@
 "Taxes" = "Belastingen";
 
 /* Opens the Terms of Service web page */
-"Terms of Service" = "Terms of Service";
+"Terms of Service" = "Servicevoorwaarden";
 
 /* Button title */
 "Text me a code instead" = "SMS een code naar me toe";
@@ -833,9 +839,6 @@
 
 /* Displayed whenever a Notification that was onscreen got deleted. */
 "The notification has been removed" = "De melding is verwijderd!";
-
-/* Displayed whenever the Details for an Order that just got deleted was onscreen. */
-"The order has been deleted from your Store!" = "De bestelling is uit je winkel verwijderd!";
 
 /* No comment provided by engineer. */
 "The server returned an empty response. This usually means you need to increase the memory limit for your site." = "De server heeft een lege respons teruggestuurd. Dat betekent meestal dat je de geheugenlimiet voor je site moet verhogen.";
@@ -921,8 +924,8 @@
 /* Displayed during the Login flow, whenever the user has no woo stores associated. */
 "Unable to find WooCommerce stores connected to this account" = "Kan geen WooCommerce-winkels vinden die aan dit account zijn gekoppeld";
 
-/* Review error notice message */
-"Unable to mark review %@" = "Unable to mark review %@";
+/* Review error notice message. It reads: Unable to mark review as {attempted status} */
+"Unable to mark review as %@" = "Unable to mark review as %@";
 
 /* No comment provided by engineer. */
 "Unable to read the WordPress site at that URL. Tap 'Need Help?' to view the FAQ." = "Kon geen WordPress-site lezen op deze URL. Tik op 'Hulp nodig?' om de veelgestelde vragen te bekijken.";
@@ -940,7 +943,7 @@
 "Undo" = "Ongedaan maken";
 
 /* Unknown Application State */
-"Unknown" = "Unknown";
+"Unknown" = "Onbekend";
 
 /* No comment provided by engineer. */
 "Unknown Search Terms" = "Onbekende zoektermen";
@@ -967,7 +970,7 @@
 "Version" = "Versie";
 
 /* Displays the version of the App */
-"Version %@" = "Version %@";
+"Version %@" = "Versie %@";
 
 /* subtitle for My Tickets */
 "View previously submitted support tickets" = "Eerder ingediende rapporttickets bekijken";
