--- a/WooCommerce/Resources/AppStoreStrings.pot
+++ b/WooCommerce/Resources/AppStoreStrings.pot
@@ -32,19 +32,19 @@ msgid ""
 "\n"
 "WooCommerce is the most customizable eCommerce platform for building your online business. Built on WordPress, it is integrated with the world’s best content management tools. From coffee subscriptions to Spanish lessons to gym memberships to complex enterprise-level eCommerce – visit WooCommerce.com/start to launch a new store and ship your idea.\n"
 "\n"
-"Requirements: WooCommerce v3.5+, the Jetpack plugin.\n"
+"Requirements: WooCommerce v3.5+, the Jetpack plugin."
 msgstr ""
 
 #. translators: Keywords used in the App Store search engine to find the app.
 #. Delimit with a comma between each keyword. Limit to 100 characters including spaces and commas.
 msgctxt "app_store_keywords"
-msgid "Woocommerce, woocommerce app, woocommerce mobile, woo app, woocommerce order alert, wordpress, eComm\n"
+msgid "Woocommerce, woocommerce app, woocommerce mobile, woo app, woocommerce order alert, wordpress, eComm"
 msgstr ""
 
 #. translators: Multi-paragraph text used to display in the Apple App Store.
 #. Limit to 170 characters including spaces and commas.
 msgctxt "app_store_promo_text"
-msgid "Run your store wherever you are. The WooCommerce app makes it easy to manage orders and inventory, track sales, and monitor store activity like new orders and reviews.\n"
+msgid "Run your store wherever you are. The WooCommerce app makes it easy to manage orders and inventory, track sales, and monitor store activity like new orders and reviews."
 msgstr ""
 
 msgctxt "v1.0-whats-new"
@@ -56,5 +56,4 @@ msgid ""
 "\n"
 "Thank you to everyone involved in development and early testing!\n"
 msgstr ""
-
 
